# model-observatory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  model_observatory.py  observatory_tui.py  observatory_v2_spec_amended.md  pyproject.toml  routing_oracle.py  verify_forma_contracts.py  verify_observatory_contracts.py  webhooks.example.json
.github/workflows/: contract-checks.yml
docs/: pro_research_pass.md  skeptic_check.md  skeptic_implementation_check.md
observatory_contracts/: __init__.py  __main__.py  forma.py  observatory.py
tests/: test_benchmarks.py
